# telegram-fwd

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  flake.nix  rust-toolchain.toml
nix/: module.nix  package.nix
src/: client.rs  config.rs  file.rs  logging.rs  main.rs  serve.rs  utils.rs
templates/: error.html  index.html  password.html  redirect.html
