[package]
name = "telegram-fwd"
version = "0.1.0"
edition = "2024"

[dependencies]
easy-config-store = "0.2.2"
grammers-client = "0.7.0"
tokio = { version = "1.48.0", features = ["full"] }
actix-web = "4"
async-stream = "0.3.6"
futures = "0.3.31"
serde_json = "1.0.145"
colog = "1.4.0"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.29"
chrono = "0.4.42"
rand = "0.9.2"
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"
toml = "0.9.8"
